# CartoonExtractor

./: README.md  mzitu.json  pyproject.toml  runner.py  setup.py
src/cartoon/: cli.py  common.py
src/cartoon/extractors/: 177pic.py  fzdm.py  jav.py  kkmh.py  mz.py  mztu.py  universal.py
src/cartoon/util/: log.py
