[tool.poetry]
name = "cartoonextractor"
version = "0.1.0"
description = ""
authors = ["tree"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
playwright = "^1.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
